--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <legend> Identité</legend>
                 <div class="choix">
                 
-                   <label>Monsieur <input type="radio" id="monsieur" name="choix" value="monsieur"></label>
+                   <label>Monsieur <input type="radio" id="monsieur" name="choix" value="monsieur" checked></label>
                      
                    <label>Madame<input type="radio" id="madame" name="choix" value="madame"></label>
                 </div>
@@ -72,7 +72,8 @@
             </div>
         </fieldset>
 
-        <button>Valider</button>
+        <button id="validate">Valider</button>
+        <button id="delete">Supprimer</button>
     </main>
 
     <footer>
